[tool.poetry]
name = "insight-deck-exporter"
version = "0.1.0"
description = "A tool to export insight decks to JSON format"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
